# adrian-transcript

./: .gitignore  README.md  helpers.py  main.py  make_transcripts.py  mitm_addon.py  pyproject.toml
transcripts/: GZWlDBXdRA.txt
vtt_segments/GZWlDBXdRA/: GZWlDBXdRA-1723812919000-textstream_eng=1000-1.txt  GZWlDBXdRA-1723812919000-textstream_eng=1000-10.txt  GZWlDBXdRA-1723812919000-textstream_eng=1000-100.txt  GZWlDBXdRA-1723812919000-textstream_eng=1000-101.txt  GZWlDBXdRA-1723812919000-textstream_eng=1000-102.txt  GZWlDBXdRA-1723812919000-textstream_eng=1000-103.txt  GZWlDBXdRA-1723812919000-textstream_eng=1000-104.txt  GZWlDBXdRA-1723812919000-textstream_eng=1000-105.txt  GZWlDBXdRA-1723812919000-textstream_eng=1000-106.txt  GZWlDBXdRA-1723812919000-textstream_eng=1000-107.txt  GZWlDBXdRA-1723812919000-textstream_eng=1000-108.txt  GZWlDBXdRA-1723812919000-textstream_eng=1000-109.txt  GZWlDBXdRA-1723812919000-textstream_eng=1000-11.txt  GZWlDBXdRA-1723812919000-textstream_eng=1000-110.txt  GZWlDBXdRA-1723812919000-textstream_eng=1000-111.txt  GZWlDBXdRA-1723812919000-textstream_eng=1000-112.txt  GZWlDBXdRA-1723812919000-textstream_eng=1000-113.txt  GZWlDBXdRA-1723812919000-textstream_eng=1000-114.txt  GZWlDBXdRA-1723812919000-textstream_eng=1000-115.txt  GZWlDBXdRA-1723812919000-textstream_eng=1000-116.txt  GZWlDBXdRA-1723812919000-textstream_eng=1000-117.txt  GZWlDBXdRA-1723812919000-textstream_eng=1000-118.txt  GZWlDBXdRA-1723812919000-textstream_eng=1000-12.txt  GZWlDBXdRA-1723812919000-textstream_eng=1000-13.txt  (+93 more)
