[project]
name = "adrian-transcript"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "mitmproxy>=11.0.2",
    "ruff>=0.11.11",
]

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "I"]

[tool.ruff.lint.flake8-quotes]
